# LogStrike

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
logstrike/: __init__.py  __main__.py  analyzer.py  cli.py  parser.py  reporter.py  rules.py
tests/: test_logstrike.py
