[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logstrike"
version = "1.0.0"
description = "Real-time log analysis and threat detection platform mapped to MITRE ATT&CK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ernest Kosmatko" }]
keywords = ["cybersecurity", "siem", "threat-detection", "mitre-attack", "log-analysis", "blue-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
logstrike = "logstrike.cli:main"

[project.urls]
Homepage = "https://github.com/Ernest-Kosmatko/LogStrike"
"Bug Tracker" = "https://github.com/Ernest-Kosmatko/LogStrike/issues"
Author = "https://github.com/Ernest-Kosmatko"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["logstrike*"]
